--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "gulp-filter": "^2.0.2",
     "gulp-flatten": "^0.3.0",
     "gulp-imagemin": "^2.3.0",
+    "gulp-jscs": "^4.0.0",
+    "gulp-jscs-stylish": "^1.4.0",
     "gulp-jshint": "^1.11.1",
     "gulp-karma": "0.0.4",
     "gulp-load-plugins": "^0.10.0",
@@ -35,6 +37,7 @@
     "karma-jasmine": "^1.0.2",
     "karma-phantomjs-launcher": "^1.0.1",
     "lazypipe": "^0.2.4",
+    "map-stream": "0.0.6",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.1.10",
     "rimraf": "^2.4.0",
