--- a/.jshintrc
+++ b/.jshintrc
@@ -4,6 +4,7 @@
   "curly": true,
   "eqeqeq": true,
   "esnext": true,
+  "jasmine": true,
   "latedef": true,
   "noarg": true,
   "node": true,
@@ -11,6 +12,15 @@
   "undef": true,
   "unused": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "inject": false,
+    "describe": false,
+    "beforeEach": false,
+    "it": false,
+    "expect": false,
+    "$": false,
+    "browser": false,
+    "element": false,
+    "by": false
   }
 }
